--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "quasar": "^1.0.0",
+    "vue-cryptojs": "^2.1.4",
     "vue-i18n": "^8.15.7"
   },
   "devDependencies": {
