--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.19.2",
     "quasar": "^1.0.0",
+    "vue-axios": "^2.1.5",
     "vue-cryptojs": "^2.1.4",
     "vue-i18n": "^8.15.7"
   },
